syntax = 'proto3';
option go_package="./;cyh_product_srv";
package cyh_product_srv;

service Products {
  rpc ProductList(ProductsRequest) returns (ProductsResponse){}
  rpc ProductAdd(ProductAddRequest) returns (ProductAddResponse){}
  rpc ProductDel(ProductDelRequest) returns (ProductDelResponse){}
  rpc ProductToEdit(ProductToEditRequest) returns (ProductToEditResponse){}
  rpc ProductDoEdit(ProductEditRequest) returns (ProductEditResponse){}
}

message ProductEditRequest {
  int32  id = 1;
  int32  num = 2;
  float  price = 3;
  string name = 4;
  string unit = 5;
  string pic = 6;
  string desc = 7;
  string create_time = 8;
}

message ProductEditResponse {
  int32 code = 1;
  string msg = 2;
}

message ProductToEditRequest {
  int32 id = 1;
}

message ProductToEditResponse {
  int32  code = 1;
  string msg = 2;
  Product product = 3;
}

message ProductDelRequest {
  int32 id = 1;
}

message ProductDelResponse {
  int32 code = 1;
  string msg = 2;
}

message ProductAddRequest {
  int32  num = 1;
  float  price = 2;
  string name = 3;
  string unit = 4;
  string pic = 5;
  string desc = 6;
  string create_time = 7;
}

message ProductAddResponse {
  int32 code = 1;
  string msg = 2;
}

message ProductsRequest {
  int32 current_page = 1;
  int32 page_size = 2;
}

message ProductsResponse {
  int32 code = 1;
  int32 total = 2;
  int32 current_page = 3;
  int32 page_size = 4;
  string msg = 5;
  repeated Product products = 6;
}

message Product {
  int32  id = 1;
  int32  num = 2;
  float  price = 3;
  string name = 4;
  string unit = 5;
  string pic = 6;
  string desc = 7;
  string create_time = 8;
}
